trunk/Archive2/7a/3f75e5dad8418b/output
main.cpp: In function 'int main()':
main.cpp:9:29: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
     scanf(input, "Test", str);
                             ^
main.cpp:9:30: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
     scanf(input, "Test", str);
                              ^
