trunk/Archive2/7a/3f75e5dad8418b/main.cpp
#include<stdio.h>
#include<stdlib.h>                                                                                                            
#include<string.h>

int main()
{
    int str;
    int input;
    scanf(input, "Test", str);
    printf("Hello world!");
}
